--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -55,6 +55,11 @@
   </div><!-- row -->
 <% end %>
 
+<div class="row">
+  <%= render partial: 'track', locals: {track: Lesson::TRACKS[0]} %>
+</div>
+
+
 <h2 class="curriculum_title">Main Curriculum</h2>
 
 <div class = "row">
